fix double scrollbar

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -40,6 +40,10 @@ html, body {
   overflow-x : hidden;
 }
 
+body {
+  overflow : hidden;
+}
+
 html,
 button,
 input,
